fixed the background image for park and updated the footer some

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
             </ul>
           </nav>
     </header>
-    <main>
+    <main class="main">
+      <div id="backgroudImage">
+
+      </div>
       <h1>A Site About <span>Some Dogs</span></h1>
         <img class="roundImage" src="images/dog1-sq.jpg" alt="dog one image">
       <label for="dogName">Name</label>
