--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       <input type="text" name="name" minlength="4" maxlength="10">
       <button type="button" name="nameThisDog">Name This Dog</button>
     </main>
-    <div id="threeArticles"> <!-- #threeArticles section -->
-    <article class="">
+    <div class="threeArticles"> <!-- #threeArticles section -->
+    <article class="article">
       <h2>How to Dog</h2>
         <img class="roundImage" src="images/dog2-sq.jpg" alt="how to dog image">
           <p>Dat tugg tho pupperion length boy. Maxiumum borkdrive log doggo
@@ -34,7 +34,7 @@
             shoob stop it fren, boofers pupper heck ruff. </p>
             <button class="blueButton" type="button" name="howToDog">How</button>
     </article>
-    <article class="">
+    <article class="article">
       <h2>What is Dogs</h2>
         <img class="roundImage" src="images/dog3-sq.jpg" alt="how to dog image">
           <p>Dat tugg tho pupperion length boy. Maxiumum borkdrive log doggo
@@ -43,7 +43,7 @@
             shoob stop it fren, boofers pupper heck ruff. </p>
             <button class="blueButton" type="button" name="howToDog">What</button>
     </article>
-    <article class="">
+    <article class="article">
       <h2>Facts from Dogs</h2>
       <img class="roundImage" src="images/dog4-sq.jpg" alt="how to dog image">
       <p>Dat tugg tho pupperion length boy. Maxiumum borkdrive log doggo
