Centered the h1 and the main content. Updated the text. Had the positons shif and fixed the top of the h2 tag.

--- a/index.html
+++ b/index.html
@@ -18,11 +18,15 @@
           </nav>
     </header>
     <main class="main">
+      <div class="main-center">
+
+
       <h1>A Site About <span>Some Dogs</span></h1>
         <img class="roundImage" src="images/dog1-sq.jpg" alt="dog one image">
       <label for="dogName">Name</label>
       <input type="text" name="name" minlength="4" maxlength="10">
       <button type="button" name="nameThisDog">Name This Dog</button>
+      </div>
     </main>
     <div class="threeArticles"> <!-- #threeArticles section -->
     <article class="article">
@@ -32,25 +36,24 @@
             extremely cuuuuute you are doing me the shock borkf, hekin good
             boys doggo doge. The neighborhood pupper bokf smol cargo long water
             shoob stop it fren, boofers pupper heck ruff. </p>
-            <button class="blueButton" type="button" name="howToDog">How</button>
+            <button class="blueButton dark-blue-button" type="button" name="howToDog">How</button>
     </article>
     <article class="article">
       <h2>What is Dogs</h2>
         <img class="roundImage" src="images/dog3-sq.jpg" alt="how to dog image">
-          <p>Dat tugg tho pupperion length boy. Maxiumum borkdrive log doggo
-            extremely cuuuuute you are doing me the shock borkf, hekin good
-            boys doggo doge. The neighborhood pupper bokf smol cargo long water
-            shoob stop it fren, boofers pupper heck ruff. </p>
-            <button class="blueButton" type="button" name="howToDog">What</button>
+          <p>DLong doggo smol borking doggo with a long snoot for pats pupperino
+            h*ck heckin angery woofer shoober aqua doggo heck, doggo aqua doggo most
+            angery pupper I have ever seen heckin angery woofer pupper. ruff adorable
+            doggo very hand that fed shibe. Extremely cuuuuuute corgo waggy wags stop it fren.</p>
+            <button class="blueButton dark-blue-button" type="button" name="howToDog">What</button>
     </article>
     <article class="article">
       <h2>Facts from Dogs</h2>
       <img class="roundImage" src="images/dog4-sq.jpg" alt="how to dog image">
-      <p>Dat tugg tho pupperion length boy. Maxiumum borkdrive log doggo
-        extremely cuuuuute you are doing me the shock borkf, hekin good
-        boys doggo doge. The neighborhood pupper bokf smol cargo long water
-        shoob stop it fren, boofers pupper heck ruff. </p>
-      <button class="blueButton" type="button" name="howToDog">How</button>
+      <p>Most angery pupper I have ever seen such treat heck, dat tungg tho. you are doin
+        me a concern shibe such treat ruff heck, stop it fren ur givin me a spook.
+        Puggorino long water shoob dat tungg tho very hand that fed shibe long bois he made many woofs.</p>
+      <button class="blueButton dark-blue-button" type="button" name="howToDog">How</button>
     </article>
   </div> <!-- end #threeArticles -->
 
