--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     </header>
     <main class="main">
       <div class="main-center">
-
-
-      <h1>A Site About <span>Some Dogs</span></h1>
-        <img class="roundImage" src="images/dog1-sq.jpg" alt="dog one image">
-      <label for="dogName">Name</label>
-      <input type="text" name="name" minlength="4" maxlength="10">
-      <button type="button" name="nameThisDog">Name This Dog</button>
+        <h1>A Site About <span>Some Dogs</span></h1>
+          <img class="roundImage" src="images/dog1-sq.jpg" alt="dog one image">
+            <div class="main-center">
+              <label for="dogName">Name</label>
+              <input type="text" name="name" minlength="4" maxlength="10">
+              <button type="button" name="nameThisDog">Name This Dog</button>
+            </div>
       </div>
     </main>
     <div class="threeArticles"> <!-- #threeArticles section -->
