fixed some things but started on JS part. need a bit of help on some css

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h1>A Site About <span>Some Dogs</span></h1>
           <img class="roundImage" src="images/dog1-sq.jpg" alt="dog one image">
             <div class="main-center">
-              <label for="dogName">Name</label>
+              <label class="inputBox" for="dogName">Name</label>
               <input type="text" name="name" minlength="4" maxlength="10">
               <button type="button" name="nameThisDog">Name This Dog</button>
             </div>
