I was able to get css for computer screen add JS for changing some dogs but could not get past that.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
       <meta charset="utf-8">
-      <link rel="stylesheet" href="styles.css">
+      <link rel="stylesheet" href="styles.css" />
+      <link rel="stylesheet"  media="screen and (min-device-with: 400px) and (max-device-width: 960px)" href="styles-large.css" />
     <title>Dog Party</title>
   </head>
   <body>
@@ -33,11 +34,11 @@
     <article class="article">
       <h2>How to Dog</h2>
         <img class="roundImage" src="images/dog2-sq.jpg" alt="how to dog image">
-          <p>Dat tugg tho pupperion length boy. Maxiumum borkdrive log doggo
+          <p id="howToDogId">Dat tugg tho pupperion length boy. Maxiumum borkdrive log doggo
             extremely cuuuuute you are doing me the shock borkf, hekin good
             boys doggo doge. The neighborhood pupper bokf smol cargo long water
             shoob stop it fren, boofers pupper heck ruff. </p>
-            <button class="blueButton dark-blue-button" type="button" name="howToDog">How</button>
+            <button id="howButton" class="blueButton dark-blue-button" type="button" name="howToDog">How</button>
     </article>
     <article class="article">
       <h2>What is Dogs</h2>
