Updated css to have iphone X styles. yea

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
       <meta charset="utf-8">
-      <link rel="stylesheet" href="styles.css" />
-      <link rel="stylesheet"  media="screen and (min-device-with: 400px) and (max-device-width: 960px)" href="styles-large.css" />
     <title>Dog Party</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css" />
+    <!-- <link rel="stylesheet"  media="screen and (min-width: 400px) and (max-width: 665px)" href="styles-iphone678.css" /> -->
   </head>
   <body>
     <header>
