I was able to get the functionality on the column buttons. Left off at tool tip.

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       <img id="logo" src="images/dog-icon.svg" alt="Dog Party Icon">
         <nav>
             <ul class="navigation">
-              <li><a href="#">How to Dog</a></li>
-              <li><a href="#">What is Dogs</a></li>
-              <li><a href="#">Facts from Dogs</a></li>
+              <li><a href="#how-to-dog">How to Dog</a></li>
+              <li><a href="#what-is-dogs">What is Dogs</a></li>
+              <li><a href="#facts-from-dogs">Facts from Dogs</a></li>
             </ul>
           </nav>
     </header>
@@ -33,7 +33,7 @@
     </main>
     <div class="threeArticles"> <!-- #threeArticles section -->
     <article class="article">
-      <h2>How to Dog</h2>
+      <h2 id="how-to-dog" >How to Dog</h2>
         <img class="roundImage" src="images/dog2-sq.jpg" alt="how to dog image">
           <p id="howToDogId">Dat tugg tho pupperion length boy. Maxiumum borkdrive log doggo
             extremely cuuuuute you are doing me the shock borkf, hekin good
@@ -42,21 +42,21 @@
             <button id="howButton" class="blueButton dark-blue-button" type="button" name="howToDog">How</button>
     </article>
     <article class="article">
-      <h2>What is Dogs</h2>
+      <h2 id="what-is-dogs">What is Dogs</h2>
         <img class="roundImage" src="images/dog3-sq.jpg" alt="how to dog image">
-          <p>DLong doggo smol borking doggo with a long snoot for pats pupperino
+          <p id="whatDogs">DLong doggo smol borking doggo with a long snoot for pats pupperino
             h*ck heckin angery woofer shoober aqua doggo heck, doggo aqua doggo most
             angery pupper I have ever seen heckin angery woofer pupper. ruff adorable
             doggo very hand that fed shibe. Extremely cuuuuuute corgo waggy wags stop it fren.</p>
-            <button class="blueButton dark-blue-button" type="button" name="howToDog">What</button>
+            <button id="whatDog"class="blueButton dark-blue-button" type="button" name="howToDog">What</button>
     </article>
     <article class="article">
-      <h2>Facts from Dogs</h2>
+      <h2 id="facts-from-dogs">Facts from Dogs</h2>
       <img class="roundImage" src="images/dog4-sq.jpg" alt="how to dog image">
-      <p>Most angery pupper I have ever seen such treat heck, dat tungg tho. you are doin
+      <p id="factDogsText">Most angery pupper I have ever seen such treat heck, dat tungg tho. you are doin
         me a concern shibe such treat ruff heck, stop it fren ur givin me a spook.
         Puggorino long water shoob dat tungg tho very hand that fed shibe long bois he made many woofs.</p>
-      <button class="blueButton dark-blue-button" type="button" name="howToDog">How</button>
+      <button id="factDogs" class="blueButton dark-blue-button" type="button" name="howToDog">Facts</button>
     </article>
   </div> <!-- end #threeArticles -->
 
